# haskell-data-handle

./: LICENSE  data-handle.cabal
System/: Handle.hs
System/Handle/: Binary.hi  Binary.hs  Enumerator.hs  String.hi  String.hs
System/Posix/: Handle.hi  Handle.hs
test/: Test.hs
